CLEANUP.txt
2025-03-04 07:18:13 - 
=== PROJECT STATEMENT ===
2025-03-04 07:18:13 - ---
description: About this project
globs:
---
# About this project

`twat-fs` is a file system utility library focused on robust and extensible file upload capabilities with multiple provider support. It provides:

- Multi-provider upload system with smart fallback (catbox.moe default, plus Dropbox, S3, etc.)
- Automatic retry for temporary failures, fallback for permanent ones
- URL validation and clean developer experience with type hints
- Simple CLI: `python -m twat_fs upload_file path/to/file.txt`
- Easy installation: `uv pip install twat-fs` (basic) or `uv pip install 'twat-fs[all,dev]'` (all features)

## Development Notes
- Uses `uv` for Python package management
- Quality tools: ruff, mypy, pytest
- Clear provider protocol for adding new storage backends
- Strong typing and runtime checks throughout

2025-03-04 07:18:13 - 
=== Current Status ===
2025-03-04 07:18:13 - Error: LOG.md is missing
2025-03-04 07:18:13 - Error: TODO.md is missing
2025-03-04 07:18:13 - [ 736]  .
├── [  64]  .benchmarks
├── [  96]  .cursor
│   └── [ 224]  rules
│       ├── [ 821]  0project.mdc
│       ├── [ 516]  cleanup.mdc
│       ├── [ 976]  filetree.mdc
│       └── [2.0K]  quality.mdc
├── [  96]  .github
│   └── [ 128]  workflows
│       ├── [2.7K]  push.yml
│       └── [1.4K]  release.yml
├── [3.5K]  .gitignore
├── [ 470]  .pre-commit-config.yaml
├── [1.0K]  CLEANUP.txt
├── [1.0K]  LICENSE
├── [ 742]  README.md
├── [   7]  VERSION.txt
├── [ 13K]  cleanup.py
├── [ 192]  dist
│   └── [   1]  .gitkeep
├── [5.6K]  pyproject.toml
├── [  96]  src
│   └── [ 224]  twat_os
│       ├── [  95]  __init__.py
│       ├── [7.4K]  paths.py
│       └── [1.0K]  paths.toml
└── [ 128]  tests
    └── [ 145]  test_package.py

10 directories, 19 files

2025-03-04 07:18:13 - 
Project structure:
2025-03-04 07:18:13 - [ 736]  .
├── [  64]  .benchmarks
├── [  96]  .cursor
│   └── [ 224]  rules
│       ├── [ 821]  0project.mdc
│       ├── [ 516]  cleanup.mdc
│       ├── [ 976]  filetree.mdc
│       └── [2.0K]  quality.mdc
├── [  96]  .github
│   └── [ 128]  workflows
│       ├── [2.7K]  push.yml
│       └── [1.4K]  release.yml
├── [3.5K]  .gitignore
├── [ 470]  .pre-commit-config.yaml
├── [1.0K]  CLEANUP.txt
├── [1.0K]  LICENSE
├── [ 742]  README.md
├── [   7]  VERSION.txt
├── [ 13K]  cleanup.py
├── [ 192]  dist
│   └── [   1]  .gitkeep
├── [5.6K]  pyproject.toml
├── [  96]  src
│   └── [ 224]  twat_os
│       ├── [  95]  __init__.py
│       ├── [7.4K]  paths.py
│       └── [1.0K]  paths.toml
└── [ 128]  tests
    └── [ 145]  test_package.py

10 directories, 19 files

2025-03-04 07:18:13 - On branch main
Your branch is up to date with 'origin/main'.

Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   .cursor/rules/filetree.mdc
	modified:   .pre-commit-config.yaml
	modified:   cleanup.py

Untracked files:
  (use "git add <file>..." to include in what will be committed)
	CLEANUP.txt

no changes added to commit (use "git add" and/or "git commit -a")

2025-03-04 07:18:13 - On branch main
Your branch is up to date with 'origin/main'.

Changes not staged for commit:
  (use "git add <file>..." to update what will be committed)
  (use "git restore <file>..." to discard changes in working directory)
	modified:   .cursor/rules/filetree.mdc
	modified:   .pre-commit-config.yaml
	modified:   cleanup.py

Untracked files:
  (use "git add <file>..." to include in what will be committed)
	CLEANUP.txt

no changes added to commit (use "git add" and/or "git commit -a")

2025-03-04 07:18:13 - 
=== Environment Status ===
2025-03-04 07:18:13 - Setting up virtual environment
2025-03-04 07:18:18 - Virtual environment created and activated
2025-03-04 07:18:18 - Installing package with all extras
2025-03-04 07:18:18 - Setting up virtual environment
2025-03-04 07:18:19 - Virtual environment created and activated
2025-03-04 07:18:22 - Package installed successfully
2025-03-04 07:18:22 - Running code quality checks
2025-03-04 07:18:22 - >>> Running code fixes...
2025-03-04 07:18:23 - src/twat_os/paths.py:126:9: FBT001 Boolean-typed positional argument in function definition
    |
124 |         package_name: str | None = None,
125 |         config_file: str | Path | None = None,
126 |         create_dirs: bool = True,
    |         ^^^^^^^^^^^ FBT001
127 |     ) -> None:
128 |         """Initialize path manager.
    |

src/twat_os/paths.py:126:9: FBT002 Boolean default positional argument in function definition
    |
124 |         package_name: str | None = None,
125 |         config_file: str | Path | None = None,
126 |         create_dirs: bool = True,
    |         ^^^^^^^^^^^ FBT002
127 |     ) -> None:
128 |         """Initialize path manager.
    |

Found 2 errors.

2025-03-04 07:18:23 - 3 files left unchanged

2025-03-04 07:18:23 - >>>Running type checks...
2025-03-04 07:18:55 - tests/test_package.py:4: error: Function is missing a return type annotation  [no-untyped-def]
tests/test_package.py:4: note: Use "-> None" if function does not return a value
src/twat_os/paths.py:15: error: Module "typing" has no attribute "Self"  [attr-defined]
src/twat_os/paths.py:15: note: Use `from typing_extensions import Self` instead
src/twat_os/paths.py:15: note: See https://mypy.readthedocs.io/en/stable/runtime_troubles.html#using-new-additions-to-the-typing-module
src/twat_os/paths.py:214: error: Returning Any from function declared to return "Path"  [no-any-return]
Found 3 errors in 2 files (checked 4 source files)

2025-03-04 07:18:55 - >>> Running tests...
2025-03-04 07:19:02 - ============================= test session starts ==============================
platform darwin -- Python 3.12.8, pytest-8.3.5, pluggy-1.5.0 -- /Users/adam/Developer/vcs/github.twardoch/pub/twat-packages/_good/twat/plugins/repos/twat_os/.venv/bin/python
cachedir: .pytest_cache
benchmark: 5.1.0 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
rootdir: /Users/adam/Developer/vcs/github.twardoch/pub/twat-packages/_good/twat/plugins/repos/twat_os
configfile: pyproject.toml
plugins: cov-6.0.0, asyncio-0.25.3, anyio-4.8.0, benchmark-5.1.0, timeout-2.3.1, mock-3.14.0
asyncio: mode=Mode.AUTO, asyncio_default_fixture_loop_scope=None
collecting ... collected 1 item

tests/test_package.py::test_version PASSED                               [100%]

============================= slowest 10 durations =============================
0.01s call     tests/test_package.py::test_version

(2 durations < 0.005s hidden.  Use -vv to show these durations.)
============================== 1 passed in 0.09s ===============================

2025-03-04 07:19:02 - All checks completed
2025-03-04 07:19:02 -  M .cursor/rules/filetree.mdc
 M .pre-commit-config.yaml
 M cleanup.py
?? CLEANUP.txt

2025-03-04 07:19:02 - Changes detected in repository
